added workflow to get player data

--- a/league_detail.html
+++ b/league_detail.html
@@ -481,7 +481,7 @@
         function goHome() {
             // Clear the session data and go back to home
             sessionStorage.removeItem('leagueData');
-            window.location.href = 'base.html';
+            window.location.href = 'index.html';
         }
         
         // Start the merge sort process
