attempt to debug

--- a/league_detail.html
+++ b/league_detail.html
@@ -293,6 +293,7 @@
                 teamsContainer.style.textAlign = 'center';
                 
                 [currentComparison.team1, currentComparison.team2].forEach((team, i) => {
+                    console.log(team.players)
                     const teamCard = document.createElement('div');
                     teamCard.className = 'team-card';
                     
